# Extracting-Requirements-From-Code

./: README.md  Research Examples  Testing.cpp  index.md  main.md
GUI/: GUILayout.lay  ReqExGUI.upp  main.cpp
Research/: 7 Tools to Gather Better Software Requirements  API-Options.txt  Analyzing a text file  C++ Text Analyzer  Tool for extraction of functional requirement from legacy code  tool_extract_req
Resources/: FLTest1.cpp  TEST1OUTPUT.txt  TestFile.txt  hello_world.c  hello_world_req_ext_program.c
TestCases/: B2D.cpp  Bubble.cpp  CheckPrime.cpp  LinkedList.cpp  Pointers.cpp  fibonacci.cpp
src/: Analyze.cpp  Analyze.h  CMakeLists.txt  GUImain.cpp  Parse.cpp  Parse.h  REObject.cpp  REObject.h  Readme.txt  Storage.cpp  Storage.h  Test1.cpp  install.sh  main.cpp
